Update .gitignore to exclude .NET Core build artifacts and add .DS_Store files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@ BlogApi/appsettings.Development.json
 BlogApi/appsettings.Production.json
 .env
 
+#.NET Core
+bin/
+obj/
+
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
