--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,10 +48,10 @@ jobs:
         sudo apt-get install -y sshpass
 
         # Copy the publish folder to your VPS
-        sshpass -p $VPS_PASSWORD scp -r ./publish/* $VPS_USER@$VPS_HOST:/var/www/blog-api/publish/
+        sshpass -p $VPS_PASSWORD scp -rv ./publish/* $VPS_USER@$VPS_HOST:/var/www/blog-api/publish/
 
         # SSH into the VPS to restart the application (assuming you're using systemd or a similar service)
-        sshpass -p $VPS_PASSWORD ssh $VPS_USER@$VPS_HOST << EOF
+        sshpass -p $VPS_PASSWORD ssh -v $VPS_USER@$VPS_HOST << EOF
           cd /var/www/blog-api
           sudo systemctl restart blog-api.service
         EOF
