--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,55 +3,49 @@ name: Deploy Blog API
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-env:
-  DOTNET_VERSION: '8.0.x'
+  workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up .NET SDK
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
-
-    - name: Restore dependencies
-      run: dotnet restore
-
-    - name: Build project
-      run: dotnet build --configuration Release
-
-    - name: Publish project
-      run: dotnet publish --configuration Release --output ./publish
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
     - name: Deploy to VPS
-      env:
-        VPS_HOST: ${{ secrets.VPS_HOST }}
-        VPS_USER: ${{ secrets.VPS_USER }}
-        VPS_PASSWORD: ${{ secrets.VPS_PASSWORD }}
-      run: |
-        # Install sshpass to use password authentication (or set up SSH keys for security)
-        sudo apt-get install -y sshpass
-
-        # Copy the publish folder to your VPS
-        sshpass -p $VPS_PASSWORD scp -rv ./publish/* $VPS_USER@$VPS_HOST:/var/www/blog-api/publish/
-
-        # SSH into the VPS to restart the application (assuming you're using systemd or a similar service)
-        sshpass -p $VPS_PASSWORD ssh -v $VPS_USER@$VPS_HOST << EOF
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.VPS_HOST }}
+        username: ${{ secrets.VPS_USER }}
+        key: ${{ secrets.VPS_SSH_KEY }}
+        script: |
           cd /var/www/blog-api
-          sudo systemctl restart blog-api.service
-        EOF
+          git pull
+          
+          dotnet restore
+          dotnet build --configuration Release --no-restore
+          dotnet publish BlogApi/BlogApi.csproj --configuration Release --output /var/www/blog-api/publish --no-build
+          
+          # Restart the service (if you have one set up)
+          if [ -f /etc/systemd/system/blogapi.service ]; then
+            sudo systemctl restart blogapi.service
+          else
+            # Create a systemd service if it doesn't exist
+            echo "[Unit]
+            Description=Blog API Service
+            After=network.target
+            
+            [Service]
+            WorkingDirectory=/var/www/blog-api/publish
+            ExecStart=/usr/bin/dotnet /var/www/blog-api/publish/BlogApi.dll
+            Restart=always
+            RestartSec=10
+            SyslogIdentifier=blogapi
+            User=root
+            Environment=ASPNETCORE_ENVIRONMENT=Production
+            
+            [Install]
+            WantedBy=multi-user.target" | sudo tee /etc/systemd/system/blogapi.service
+            
+            sudo systemctl daemon-reload
+            sudo systemctl enable blogapi.service
+            sudo systemctl start blogapi.service
+          fi
