--- a/BlogApi/appsettings.json
+++ b/BlogApi/appsettings.json
@@ -1,10 +1,12 @@
 {
-  "ConnectionStrings": {
-    "PostgresConnection": ""
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
   },
-  "Jwt": {
-    "Issuer": "BlogApiIssuer",
-    "Audience": "BlogApiAudience"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=db;Database=blog;Username=postgres;Password=postgres"
   },
   "AllowedHosts": "*"
 }
