--- a/BlogApi/appsettings.json
+++ b/BlogApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db;Database=blog;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=${DB_HOST};Database=blog;Username=${DB_USER};Password=${DB_PASS}"
   },
   "AllowedHosts": "*"
 }
